--- a/src/MainFrame.form
+++ b/src/MainFrame.form
@@ -31,14 +31,7 @@
                   <Group type="102" attributes="0">
                       <Component id="jLabel2" min="-2" pref="90" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Component id="cbxTruck" min="-2" pref="140" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="cbxStack" max="32767" attributes="0"/>
-                          </Group>
-                          <Component id="comboboxAlgorithm" min="-2" pref="339" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="comboboxAlgorithm" min="-2" pref="339" max="-2" attributes="0"/>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
                   <Component id="panelRandom" max="32767" attributes="0"/>
@@ -55,12 +48,7 @@
                   <Component id="jLabel2" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                   <Component id="comboboxAlgorithm" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="cbxTruck" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="cbxStack" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
               <Component id="panelFile" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="panelRandom" min="-2" max="-2" attributes="0"/>
@@ -84,18 +72,6 @@
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="algorithmModel" type="code"/>
         </Property>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JCheckBox" name="cbxTruck">
-      <Properties>
-        <Property name="selected" type="boolean" value="true"/>
-        <Property name="text" type="java.lang.String" value="Show Trucks"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JCheckBox" name="cbxStack">
-      <Properties>
-        <Property name="selected" type="boolean" value="true"/>
-        <Property name="text" type="java.lang.String" value="Show Execution Stack"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="panelFile">
